<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The NUMS</string>
    <string name="action_settings">Settings</string>
    
    <!-- THE RUSSIA -->
    <string name="topMostCaption">TYPE THE NUMS</string>
    <string name="subCaption">Please enter three numbers.</string>
    
    <!-- THE UKRAINE THE UKRAINE -->
    <string name="outputCaption">The largest num is: </string>
    <string name="outputStream">-</string>
    
    <!-- THE CRIMEA THE CRIMEAN PENINSULASJIOEWF -->
    <string name="resetButton">Clear all</string>
    <string name="computeButton">Find Largest Number</string>
    <string name="quitButton">Minimize Nums</string>
    <string name="LogoDesc">Logo</string>

</resources>
